# dmpc_formation

./: .gitignore  4uav_formation_trace.csv  README.md  __init__.py  controller.py  main_sim.py  single_uav_test.py
constraint/: __init__.py  functions.py
cost/: __init__.py  functions.py
dmpc_formation_bridge/: CMakeLists.txt
dmpc_formation_bridge/config/: mavros.yaml
dmpc_formation_bridge/launch/: formation_bridge.launch  gazebo_formation.launch  px4_formation_simulation.launch
dmpc_formation_bridge/msg/: FormationState.msg
dmpc_formation_bridge/scripts/: gazebo_formation_visualizer.sh  run_simulation.sh  start_gazebo_4uav.sh  start_mavros.sh  start_px4_multi.sh  visualize_formation.sh
dmpc_formation_bridge/sdf/: quadrotor_basic.sdf  simple_quadrotor.sdf
dmpc_formation_bridge/src/: dmpc_bridge_node.py  formation_4uav_controller.py  formation_gazebo_visualizer.py  formation_gz_controller.py  formation_pid_controller.py  formation_triangle_controller.py  trajectory_playback.py
dmpc_formation_bridge/urdf/: quadrotor_simple.urdf
lmi/: __init__.py  gain_compute.py  terminal.py
models/: __init__.py  formation.py  uav_model.py
ros_bridge/: CMakeLists.txt  package.xml
ros_bridge/launch/: multi_uav.launch
ros_interface/: __init__.py
utils/: __init__.py  network.py  trajectory.py
