<?xml version="1.0"?>
<package format="2">
  <name>dmpc_formation_bridge</name>
  <version>1.0.0</version>
  <description>DMPC Formation Controller Bridge for PX4/Gazebo</description>

  <maintainer email="demo@example.com">OpenClaw Agent</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>message_generation</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <export>
  </export>
</package>
